--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,9 +2,9 @@ spring:
   application:
     name: Opportunity-API
   datasource:
-    url: jdbc:postgresql://${DATABASE_HOST:autorack.proxy.rlwy.net}:${DATABASE_PORT:25270}/${DATABASE_NAME:railway}
+    url: jdbc:postgresql://${DATABASE_HOST:junction.proxy.rlwy.net}:${DATABASE_PORT:50320}/${DATABASE_NAME:railway}
     username: ${DATABASE_USER:postgres}
-    password: ${DATABASE_PASSWORD:tsCysGadzZoOVXQamrxIlOCjAjrcKLmI}
+    password: ${DATABASE_PASSWORD:hQehMRckuUQYDFjKCQRuXIrwCqAprkTS}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
