--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,15 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>7.0.5.Final</version> <!-- Use a versão adequada -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
 		<!-- Jakarta Bean Validation API -->
 		<dependency>
 			<groupId>jakarta.validation</groupId>
